tests/testData/highlighting/NonPropBindingPrefix.tml
<html xmlns:t="<error>http://tapestry.apache.org/schema/tapestry_5_0_0.xsd</error>">
    <body>
    ${someProp.length()}
    ${someProp.length()<error descr="} expected"> </error>- 5}
    ${message:status-panel.test-link}
    ${prop:someProp.length()}
    </body>
</html>
